# mpdecimal

./: CMakeLists.txt  Makefile  README.txt  config.h  config.h.in  config.status  configure
cmake/: FindSGX.cmake  auxilliary_func.cmake  mpdecimal_SGXConfig.cmake.in  setup_installation.cmake
libmpdec/: Makefile  context.c  io.c  mpdecimal.h  mpdecimal32vc.h  mpdecimal64vc.h
libmpdec++/: Makefile
tests/: Makefile
tests++/: Makefile
